--- a/scss/iconfont.scss
+++ b/scss/iconfont.scss
@@ -3,37 +3,49 @@
 @import "data";
 @import "mixin";
 
-
+// ==========================================================================
 // 一、使用伪元素生成调用方法
+// ==========================================================================
 
 // 1. @include font-face();
+// 或者：@include font-face(字体地址);
 @include font-face();
 
+
 // 2. 为所有icon前缀开头的class引入字体
-[class^="#{$icon-class-prefix}"]:before,
-[class*="#{$icon-class-prefix}"]:before {
+[class^="#{$icon-class-prefix}"],
+[class*="#{$icon-class-prefix}"]{
     @include icon;
 }
 
-//3. 调用指定的图标
-// @include icon("字体名称");
-//  可以追加样式
-.travel{
-    @include icon(travel);
-    font-size: 30px;
-}
 
-//4. 或者生成全部图标
-//@include get-icon(true);
-/**
- * 生成全部 iconfont    
- */
+// 3. 调用指定的图标
+// @include icon("字体名称");
+// 可以追加样式
+// ----------------------------
+//  .travel{
+//      @include icon(travel);
+//      font-size: 30px;
+//  }
+// ----------------------------
+
+
+// 4. 或者生成全部图标
+// @include get-icon(true);
 @include get-icon(true);
 
 
+// ==========================================================================
 // 二、使用传统的 class 调用方法
+// ==========================================================================
+
 // 1. 直接指定一个class，比如iconfont
 // 2. 引入字体 @include icon();
+// 3. 在 html 中直接写编码，例如：
+// ---------------------------------
+// <b class="iconfont">&#x346e;</b>
+// ---------------------------------
+// 4. 同样可以追加样式
 .iconfont{
     @include icon();
 }
