--- a/_includes/ceiling.html
+++ b/_includes/ceiling.html
@@ -13,7 +13,7 @@
         <i class="iconfont mi-iconfont"></i>
         <span class="name">Iconfont</span>
       </a>
-      <a href="http://etaoux-bj.taobao.ali.com/rap/platform/home.action">
+      <a href="http://rap.alibaba-inc.com">
         <i class="iconfont mi-rap"></i>
         <span class="name">RAP</span>
       </a>
