--- a/src/neat.css
+++ b/src/neat.css
@@ -16,9 +16,8 @@
  * 5.考虑移动设备。
  */
 
-
 /* ==========================================================================
-   无即是有，有即是无
+   有即是无，无即是有
    ========================================================================== */
 body, dl, dd, /* dt, 默认没边距 */
 ul, ol, /*li, 默认没边距 */
