--- a/assets/base.css
+++ b/assets/base.css
@@ -124,9 +124,12 @@ body a {
   margin: 0;
   padding: 0;
 }
+
+
 #nav .entry {
-  display: inline-block;
-  padding: 16px 20px;
+  display: block;
+  height: 100%;
+  padding: 0 20px;
 }
 #nav .entry:hover {
   background: #d6d6d6;
@@ -356,21 +359,32 @@ body a {
     width: 100%;
     height: 60px;
     border-bottom: 1px solid #d6d6d6;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -ms-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s;
   }
   #nav.fixed {
     position: fixed;
     top: 0;
     background: #f4f4f4;
+    height: 30px;
   }
+
+  #nav.fixed .entry {
+    line-height: 30px;
+  }
+
   #nav .logo {
     float: left;
   }
-  #nav .menu {
-    float: right;
-  }
+  #nav .menu,
   #nav li {
     float: right;
+    height: 100%;
   }
+
   #nav .entry {
     border-right: 1px solid #d6d6d6;
   }
