--- a/src/button.css
+++ b/src/button.css
@@ -1,4 +1,7 @@
 .btn {
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
     display: inline-block;
     border: 1px solid #ddd;
     *border: 0 none;
@@ -15,7 +18,7 @@
     font-size: 12px;
     font-weight: bold;
     cursor: pointer;
-    border-bottom-color: #bbb;
+    border-bottom-color: #bbb !important;
     background-color: #f4f4f4;
     background-image: -moz-linear-gradient(top, #f8f8f8, #eeeeee);
     background-image: -ms-linear-gradient(top, #f8f8f8, #eeeeee);
@@ -66,7 +69,11 @@
 }
 
 /*group btn*/
+.btn-group{
+    overflow: hidden;
+}
 .btn-group .btn {
+    float: left;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     border-radius: 0;
@@ -88,7 +95,7 @@
 
 .btn-red {
     border-color: transparent;
-    border-bottom-color: #c21b1b;
+    border-bottom-color: #c21b1b !important;
     background-color: #ff3636;
     background-image: -moz-linear-gradient(top, #ff4444, #ff2222);
     background-image: -ms-linear-gradient(top, #ff4444, #ff2222);
@@ -132,7 +139,7 @@
 
 .btn-orange {
     border-color: transparent;
-    border-bottom-color: #cf370c;
+    border-bottom-color: #cf370c !important;
     background-color: #ff4e00;
     background-image: -moz-linear-gradient(top, #ff5500, #ff4400);
     background-image: -ms-linear-gradient(top, #ff5500, #ff4400);
@@ -176,7 +183,7 @@
 
 .btn-blue {
     border-color: transparent;
-    border-bottom-color: #0960ab;
+    border-bottom-color: #0960ab !important;
     background-color: #4288c5;
     background-image: -moz-linear-gradient(top, #488fcd, #3a7db8);
     background-image: -ms-linear-gradient(top, #488fcd, #3a7db8);
@@ -220,7 +227,7 @@
 
 .btn-disabled {
     border: 1px solid #e0e0e0;
-    border-bottom-color: #ccc;
+    border-bottom-color: #ccc !important;
     cursor: default;
 }
 
