为侧边导航增加底部边框，防止hover时色块叠加到一起

--- a/assets/base.css
+++ b/assets/base.css
@@ -412,6 +412,7 @@ body a {
   }
   #page .stoc a {
     height: auto;
+    border-bottom: 1px solid #F3F3F3;
   }
   #page .fixed .stoc {
     top: 80px;
