尝试为 a 左右增加一个空格

--- a/assets/base.css
+++ b/assets/base.css
@@ -15,6 +15,10 @@ a {
     transition: color .2s linear, background-color .2s linear, border-color .3s linear;
 }
 
+.type a {
+    margin: 0 .25em;
+}
+
 .highlight {
   background: none;
 }
