--- a/assets/base.css
+++ b/assets/base.css
@@ -45,6 +45,7 @@ a {
 .type h2 {
   font-size: 1.5em;
   margin: 0.83em 0;
+  border-bottom: 1px solid #E5E5E5;
 }
 .type h3 {
   font-size: 1.17em;
