中文斜体可读性很差，删除代码注释中的斜体样式

--- a/assets/syntax/github.css
+++ b/assets/syntax/github.css
@@ -1,12 +1,12 @@
 .highlight{background:#ffffff;}
-.highlight .c{color:#999988;font-style:italic;}
+.highlight .c{color:#999988;}
 .highlight .err{color:#a61717;background-color:#e3d2d2;}
 .highlight .k{font-weight:bold;}
 .highlight .o{font-weight:bold;}
-.highlight .cm{color:#999988;font-style:italic;}
+.highlight .cm{color:#999988;}
 .highlight .cp{color:#999999;font-weight:bold;}
-.highlight .c1{color:#999988;font-style:italic;}
-.highlight .cs{color:#999999;font-weight:bold;font-style:italic;}
+.highlight .c1{color:#999988;}
+.highlight .cs{color:#999999;font-weight:bold;}
 .highlight .gd{color:#000000;background-color:#ffdddd;}
 .highlight .gd .x{color:#000000;background-color:#ffaaaa;}
 .highlight .ge{font-style:italic;}
