演示页面CSS地址改为src源码目录

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,7 +10,11 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="format-detection" content="telephone=no" />
   <title>{% if page.title %}{{ page.title }} - {% endif %} Cube 样式解决方案 - THX</title>
-  <link rel="stylesheet" type="text/css" href="http://g.tbcdn.cn/thx/cube/1.0.11/??cube.css,type.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/neat.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/layout.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/utils.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/iconfont.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/button.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/syntax/github.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/base.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/style.css">
