增加本地type.css链接

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/utils.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/iconfont.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/button.css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/type.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/syntax/github.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/base.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/style.css">
