Custom toc template

--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -1,1 +1,23 @@
-<div id="stoc" bx-name="mosaics/stoc" bx-tpl="./default" bx-config="{ essay: 'article' }"></div>
+<script type="text/x-template" id="J_tocTpl">
+{% raw %}
+  <div class="stoc">
+  <label><i class="iconfont">&#61477;</i> 目录</label>
+  {{#each tree}}
+    <ol>
+    {{#each children}}
+      <li><a href="#{{id}}" class="j-entry level2">{{text}}</a>
+        {{#if children.length !== 0}}
+        <ol>
+        {{#each children}}
+          <li><a href="#{{id}}" class="j-entry level3">{{text}}</a>
+        {{/each}}
+        </ol>
+        {{/if}}
+      </li>
+    {{/each}}
+    </ol>
+  {{/each}}
+</div>
+{% endraw %}
+</script>
+<div id="stoc" bx-name="mosaics/stoc" bx-tpl="#J_tocTpl" bx-config="{ essay: 'article' }"></div>
