更新 iconfont scss ，生成所有 content 数据的版本为 iconfont-all.css (*^__^*)

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -8,7 +8,7 @@
 $icon-class-prefix: icon- !default;
 
 //给 iconfont 取一个字体名称
-$icon-name: uxiconfont !default;
+$icon-name: iconfont !default;
 
 //iconfont 字体地址 
 $icon-src: "http://t.tbcdn.cn/apps/e/brix/fonts/uxiconfont" !default;
