--- a/assets/base.css
+++ b/assets/base.css
@@ -5,8 +5,18 @@ body {
   background: #e4e6e5 url(img/bg.jpg);
 }
 
-body a {
-  color: #3187DB;
+/* 全局hover颜色和背景色动画 */
+a {
+    color:#3187DB;
+    -webkit-transition: color .2s linear, background-color .2s linear, border-color .3s linear;
+    -moz-transition: color .2s linear, background-color .2s linear, border-color .3s linear;
+    -o-transition: color .2s linear, background-color .2s linear, border-color .3s linear;
+    -ms-transition: color .2s linear, background-color .2s linear, border-color .3s linear;
+    transition: color .2s linear, background-color .2s linear, border-color .3s linear;
+}
+
+.type a {
+    margin: 0 .25em;
 }
 
 .highlight {
@@ -35,6 +45,7 @@ body a {
 .type h2 {
   font-size: 1.5em;
   margin: 0.83em 0;
+  border-bottom: 1px solid #E5E5E5;
 }
 .type h3 {
   font-size: 1.17em;
@@ -98,9 +109,6 @@ body a {
 .mi-diamond:before {
   content: '\f005';
 }
-.mi-gaming:before {
-  content: '\007a';
-}
 
 /*
  * Aside styles
@@ -127,9 +135,13 @@ body a {
   margin: 0;
   padding: 0;
 }
+
+
 #nav .entry {
-  display: inline-block;
-  padding: 16px 20px;
+  display: block;
+  height: 100%;
+  line-height: 60px;
+  padding: 0 20px;
 }
 #nav .entry:hover {
   background: #d6d6d6;
@@ -198,6 +210,7 @@ body a {
 }
 #footer address {
   font-size: 12px;
+  font-style: normal;
 }
 
 
@@ -206,6 +219,7 @@ body a {
  */
 #content {
   min-width: 320px;
+  background-color: #fff;
 }
 
 
@@ -267,6 +281,7 @@ body a {
     width: 199px;
     background: #f4f4f4;
     border-right: 1px solid #d6d6d6;
+    -webkit-transform: translateZ(0);
   }
   #nav .toggler {
     display: inline-block;
@@ -359,21 +374,32 @@ body a {
     width: 100%;
     height: 60px;
     border-bottom: 1px solid #d6d6d6;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -ms-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s;
   }
   #nav.fixed {
     position: fixed;
     top: 0;
     background: #f4f4f4;
+    height: 30px;
   }
+
+  #nav.fixed .entry {
+    line-height: 30px;
+  }
+
   #nav .logo {
     float: left;
   }
-  #nav .menu {
-    float: right;
-  }
+  #nav .menu,
   #nav li {
     float: right;
+    height: 100%;
   }
+
   #nav .entry {
     border-right: 1px solid #d6d6d6;
   }
@@ -383,8 +409,8 @@ body a {
 
   #content {
     max-width: 680px;
-    padding: 10px;
-    margin-top: 32px;
+    margin-top: 130px;
+    padding:1em 2em;
   }
 
   #page .stoc {
@@ -398,9 +424,24 @@ body a {
   }
   #page .stoc a {
     height: auto;
+    border-bottom: 1px solid #F3F3F3;
   }
   #page .fixed .stoc {
     top: 80px;
   }
 }
 
+.stoc li a{
+    display: inline-block !important;
+    padding: 3px 1em !important;
+}
+
+.stoc ol{
+    margin: 0;
+    padding-left: 14px !important;
+}
+
+.stoc .decimal li:before,
+.stoc .cjk li:before{
+    color: #96B0D8;
+}
