--- a/src/type.css
+++ b/src/type.css
@@ -142,6 +142,113 @@ h6 {
     font-size: 12px;
 }
 
+.type blockquote {
+    margin: 32px 28px;
+    padding-left: 14px;
+    border-left: 3px solid #CCC;
+    line-height: 1.7;
+}
+
+
+/**
+ * 列表项
+ * 1. 无序列表默认使用方块
+ */
+.type ul {
+    list-style-type: square; /* 1 */
+    padding-left: 30px;
+    margin-top: 14px;
+    margin-bottom: 14px;
+}
+
+.type ul ul,
+.type ul ol ul {
+    list-style-type: disc;
+}
+
+.type ol {
+    list-style: decimal;
+    padding-left: 30px;
+    margin-top: 14px;
+    margin-bottom: 14px;
+}
+
+.type ol ol ul,
+.type ol ul ul,
+.type ul ul ul {
+    list-style-type: circle;
+}
+
+.type ol ol ol ul,
+.type ol ol ul ul,
+.type ol ul ul ul,
+.type ul ul ul ul {
+    list-style-type: square;
+}
+
+.type dt {
+    font-weight: bold;
+    margin-top: 14px;
+}
+
+/**
+ * 表格
+ * 1. 表格隔行换色
+ */
+.type th {
+    font-weight: inherit;
+}
+
+.type th,
+.type td {
+    border: 1px solid #CCC;
+    padding: 5px 10px;
+}
+
+.type table tr:nth-child(odd) td {
+    background-color: #f5f5f5; /* 1 */
+}
+
+/* 代码 */
+.type code {
+    margin: 0 .25em;
+    padding: 0 .4em;
+    border: 1px solid #DDD;
+    background-color: #F8F8F8;
+    border-radius: 3px;
+}
+
+.type pre {
+    background-color: #F8F8F8;
+    border: 1px solid #DDD;
+    font-size: 12px;
+    line-height: 18px;
+    overflow: auto;
+    padding: 6px 10px;
+    border-radius: 3px;
+    word-break: break-all;
+    word-wrap: break-word;
+}
+
+/**
+ * 通常代码高亮 code 标签会嵌套在 pre 标签内部，需要重置样式。
+ */
+.type pre code {
+    margin: 0;
+    padding: 0;
+    border: 0 none;
+    background: none;
+    border-radius: 0;
+    font-size: inherit;
+}
+
+.type hr {
+    border: 0 none;
+    border-bottom: 1px solid #999;
+    margin-top: 14px;
+    margin-bottom: 14px;
+}
+
 /* ==========================================================================
    CSS 自动生成标题编号
    ========================================================================== */
@@ -207,7 +314,7 @@ h6 {
  */
 
 /**
- * 二级标题（章）
+ * 一级标题（章）
  * 输出 1
  */
 .type h2 {
@@ -220,7 +327,7 @@ h6 {
 }
 
 /**
- * 二级标题(汉字)
+ * 一级标题(汉字)
  * 输出 一、
  */
 
@@ -235,7 +342,7 @@ h6 {
 }
 
 /**
- * 三级标题（节）
+ * 二级标题（节）
  * 输出 1.1
  */
 .type h3 {
@@ -248,7 +355,7 @@ h6 {
 }
 
 /**
- * 四级标题（子节）
+ * 三级标题（子节）
  * 输出 1.1.1
  */
 .type h4:before {
@@ -256,217 +363,88 @@ h6 {
     counter-increment: subsection;
 }
 
-.type blockquote {
-    margin: 32px 28px;
-    padding-left: 14px;
-    border-left: 3px solid #CCC;
-    line-height: 1.7;
-}
-
-
-/**
- * 列表项
- * 1. 无序列表默认使用方块
- */
-.type ul {
-    list-style-type: square; /* 1 */
-    padding-left: 30px;
-    margin-top: 14px;
-    margin-bottom: 14px;
-}
-
-.type ul ul,
-.type ul ol ul {
-    list-style-type: disc;
-}
-
-.type ol {
-    list-style: decimal;
-    padding-left: 30px;
-    margin-top: 14px;
-    margin-bottom: 14px;
-}
-
-.type ol ol ul,
-.type ol ul ul,
-.type ul ul ul {
-    list-style-type: circle;
-}
-
-.type ol ol ol ul,
-.type ol ol ul ul,
-.type ol ul ul ul,
-.type ul ul ul ul {
-    list-style-type: square;
-}
-
-/**
- * 列表嵌套时，去除上下边距
- */
-/*.type li ul,
-.type li ol,
-.type ol ol li,
-ol.type ol li {
-  margin-top: auto;
-  margin-bottom: auto;
-}*/
 
 /* --------------------------------------------------------------------------
    列表自动生成编号
    -------------------------------------------------------------------------- */
 /**
- * ol 自动生成编号
+ * 1. 为每个ol元素创建新的计数器实例
+ * 2. 隐藏默认的列表项
+ * @demo: http://jsbin.com/IpIPinu/1/edit?css,output
+ */
+ol.decimal,
+.decimal ol,
+ol.cjk,
+.cjk ol{
+  counter-reset: section;/* 1 */
+  list-style-type: none !important; /* 2 */
+  *list-style-type: decimal;
+}
+
+/**
+ * ol 自动生成数字编号
  * 在 ol 或者外层容器上增加 class="decimal"
- * @demo: http://jsbin.com/aCAliTA/1/edit
+ * 兼容 IE 8+
  * 最终生成如下格式编号：
     1
     1.1
     1.1.1
     1.1.1.1
+    1.1.1.1.1
+    ...
  */
 
-ol.decimal,
-.decimal ol {
-     counter-reset: list-item;
-}
-
-ol.decimal li,
-.decimal li {
-  counter-increment: list-item;
-}
-
-ol.decimal li:before,
-.decimal li:before {
-     content: counters(list-item,".");
-     margin-right: .5em;
+.decimal li:before,
+.cjk li:before{
+   color:#666;
 }
 
 /**
- * ol 自动生成编号（第一个序号为汉字）
+ * 1. 只增加计数器的当前实例
+ * 2. 为所有计数器实例增加以“.”分隔的值
+ */
+
+.decimal li:before {
+  counter-increment: section; /* 1 */
+  content: counters(section, ".")" "; /* 2 */
+}
+
+/**
+ * ol 自动生成汉字编号
  * 在 ol 或者外层容器上增加 class="cjk"
+ * 不支持 IE
  * 最终生成如下格式编号：
     一、
-    1.1
-    1.1.1
-    1.1.1.1
+    一之一、
+    一之一之一、
+    一之一之一之一、
+    ...
  */
-
-ol.cjk li,
-.cjk li {
-  counter-increment: h1;
+.cjk li:before{
+  counter-increment: section; 
+  content: counters(section, "之",cjk-ideographic) "、"; 
 }
 
-ol.cjk li:before,
-.cjk li:before {
-     content: counter(h1,cjk-ideographic)"、";
-     margin-right: .25em;
-}
-
-ol.cjk,
-.cjk ol {
-     counter-reset: list-item;
-}
-
-ol.cjk ol li,
-.cjk ol li {
-  counter-increment: list-item;
-}
-
-ol.cjk ol li:before,
-.cjk ol li:before {
-     content: counters(list-item,".");
-     margin-right: .5em;
-}
-
-/**
- * 去掉默认的列表项
- */
-.decimal,
-.cjk,
-.decimal ol,
-.cjk ol,
-.type .decimal,
-.type .cjk,
-.type .decimal ol,
-.type .cjk ol{
-    list-style-type: none;
-    *list-style-type: decimal;
+.cjk li li:before{
+  counter-increment: section; 
+  content: counters(section); 
 }
 
 /**
  * ol 内嵌套的 ul 不生成序号
  */
 .decimal ul,
-.cjk ul{
+.cjk ul {
     list-style-type: square;
     list-style-position: inside;
 }
 
 .decimal ul li:before,
-.cjk ul li:before{
-    content: none !important;
+.cjk ul li:before {
+    content: none!important;
 }
 
-.type dt {
-    font-weight: bold;
-    margin-top: 14px;
-}
 
-/**
- * 表格
- * 1. 表格隔行换色
- */
-.type th {
-    font-weight: inherit;
-}
 
-.type th,
-.type td {
-    border: 1px solid #CCC;
-    padding: 5px 10px;
-}
 
-.type table tr:nth-child(odd) td {
-    background-color: #f5f5f5; /* 1 */
-}
-
-/* 代码 */
-.type code {
-    margin: 0 .25em;
-    padding: 0 .4em;
-    border: 1px solid #DDD;
-    background-color: #F8F8F8;
-    border-radius: 3px;
-}
-
-.type pre {
-    background-color: #F8F8F8;
-    border: 1px solid #DDD;
-    font-size: 12px;
-    line-height: 18px;
-    overflow: auto;
-    padding: 6px 10px;
-    border-radius: 3px;
-    word-break: break-all;
-    word-wrap: break-word;
-}
-
-/**
- * 通常代码高亮 code 标签会嵌套在 pre 标签内部，需要重置样式。
- */
-.type pre code {
-    margin: 0;
-    padding: 0;
-    border: 0 none;
-    background: none;
-    border-radius: 0;
-    font-size: inherit;
-}
-
-.type hr {
-    border: 0 none;
-    border-bottom: 1px solid #999;
-    margin-top: 14px;
-    margin-bottom: 14px;
-}
 
