--- a/assets/base.css
+++ b/assets/base.css
@@ -252,6 +252,7 @@ a {
   #content {
     height: 100%;
     overflow: auto;
+    -webkit-overflow-scrolling : touch; /* 防止iOS 没有平滑滚动 */
   }
 
   #content-wrap {
