自动生成编号IE不支持使用默认数字

--- a/src/type.css
+++ b/src/type.css
@@ -378,7 +378,7 @@ ol.cjk,
 .cjk ol{
   counter-reset: list;/* 1 */
   list-style-type: none !important; /* 2 */
-  *list-style-type: decimal;
+  *list-style-type: decimal !important;
 }
 
 /**
